test/Fail/PragmasApplyOnlyToCurrentModule.agda
{-# OPTIONS --no-termination-check #-}

module PragmasApplyOnlyToCurrentModule where

import Imports.NonTerminating
